@@ -34,6 +34,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - add qnodes, qnoded, qserverd, and qschedd symlinks
   e - enable DEFAULTCKPT torque.cfg parameter
   e - update suse initscripts
+  e - allow compute host and submit host suffix with nodefile_suffix
 
 2.1.9
   f - new queue attribute disallowed_types, currently recognized types:
